--- a/Report/20230716-PrismGCDocument/Abstract.tex
+++ b/Report/20230716-PrismGCDocument/Abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-    本文是棱镜项目组的作品PrismGC的设计报告。PrismGC是一款在安路科技EG4S20的FPGA平台上构建，基于Arm Cortex M0处理器的智能游戏机系统。PrismGC目前已经实现了基本的输入输出控制和游戏的显示与音乐功能，并通过一款自行设计的游戏“别踩黑线！”进行了系统的演示性验证。本文将就PrismGC的系统设计、硬件架构、软硬件划分、游戏流程、智能化IP设计逐一进行介绍。
+    本文是棱镜项目组的作品PrismGC的设计报告。PrismGC是一款在安路科技EG4S20的FPGA平台上构建，基于Arm Cortex M0处理器的智能游戏机系统。PrismGC目前已经实现了基本的输入输出控制和游戏的显示与音乐功能，并基于WII手柄实现了游戏的智能化体感交互。PrismGC现搭载了一款项目组自行设计开发的游戏“无敌史莱姆的冒险”，具有明确的核心玩法和丰富的关卡，具备相当的可玩性。本文将就PrismGC游戏机的系统设计、硬件架构、软件游戏流程、智能化IP设计等内容逐一进行介绍。
 \end{abstract}
