--- a/Report/20230716-PrismGCDocument/BlockDemo.tex
+++ b/Report/20230716-PrismGCDocument/BlockDemo.tex
@@ -99,7 +99,7 @@
 \begin{document}
 \begin{tikzpicture}
 
-\draw[fill=white] (-0.5,-0.5) rectangle (11.5,11.5);
+\draw[thin,gray,fill=white] (-0.5,-0.5) rectangle (11.5,11.5);
 
 \BlockICE{0}{0}
 \BlockBAR{0}{1}
