--- a/Report/20230716-PrismGCDocument/Map19.fig.tex
+++ b/Report/20230716-PrismGCDocument/Map19.fig.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 \begin{tikzpicture}
-\BlockBAR{0}{0}
+\draw[thin,gray,fill=white] (-0.5,-0.5) rectangle (11.5,11.5);\BlockBAR{0}{0}
 \BlockBAR{0}{1}
 \BlockBAR{0}{2}
 \BlockBAR{0}{3}
@@ -26,44 +26,44 @@
 \BlockBAR{1}{9}
 \BlockBAR{1}{10}
 \BlockBAR{1}{11}
-\BlockBAR{2}{0}
-\BlockBAR{2}{1}
-\BlockBAR{2}{2}
-\BlockBAR{2}{3}
-\BlockBAR{2}{4}
-\BlockBAR{2}{5}
-\BlockBAR{2}{6}
-\BlockBAR{2}{7}
-\BlockBAR{2}{8}
-\BlockBAR{2}{9}
-\BlockBAR{2}{10}
-\BlockBAR{2}{11}
-\BlockBAR{3}{0}
-\BlockBAR{3}{1}
+\BlockICE{2}{0}
+\BlockICE{2}{1}
+\BlockICE{2}{2}
+\BlockICE{2}{3}
+\BlockPOR{2}{4}{1}
+\BlockICE{2}{5}
+\BlockICE{2}{6}
+\BlockICE{2}{7}
+\BlockICE{2}{8}
+\BlockICE{2}{9}
+\BlockICE{2}{10}
+\BlockEND{2}{11}
+\BlockICE{3}{0}
+\BlockICE{3}{1}
 \BlockBAR{3}{2}
 \BlockBAR{3}{3}
-\BlockBAR{3}{4}
-\BlockBAR{3}{5}
-\BlockBAR{3}{6}
-\BlockBAR{3}{7}
-\BlockBAR{3}{8}
-\BlockBAR{3}{9}
-\BlockBAR{3}{10}
+\BlockICE{3}{4}
+\BlockICE{3}{5}
+\BlockICE{3}{6}
+\BlockICE{3}{7}
+\BlockICE{3}{8}
+\BlockICE{3}{9}
+\BlockICE{3}{10}
 \BlockBAR{3}{11}
 \BlockICE{4}{0}
 \BlockICE{4}{1}
-\BlockICE{4}{2}
-\BlockICE{4}{3}
+\BlockBAR{4}{2}
+\BlockBAR{4}{3}
 \BlockICE{4}{4}
-\BlockBAR{4}{5}
-\BlockBAR{4}{6}
+\BlockICE{4}{5}
+\BlockICE{4}{6}
 \BlockICE{4}{7}
 \BlockICE{4}{8}
 \BlockICE{4}{9}
-\BlockEND{4}{10}
-\BlockICE{4}{11}
+\BlockICE{4}{10}
+\BlockBAR{4}{11}
 \BlockICE{5}{0}
-\BlockICE{5}{1}
+\BlockPOR{5}{1}{1}
 \BlockICE{5}{2}
 \BlockICE{5}{3}
 \BlockICE{5}{4}
@@ -74,10 +74,10 @@
 \BlockICE{5}{9}
 \BlockICE{5}{10}
 \BlockICE{5}{11}
-\BlockICE{6}{0}
-\BlockICE{6}{1}
-\BlockICE{6}{2}
-\BlockICE{6}{3}
+\BlockBAR{6}{0}
+\BlockBAR{6}{1}
+\BlockBAR{6}{2}
+\BlockBAR{6}{3}
 \BlockICE{6}{4}
 \BlockICE{6}{5}
 \BlockICE{6}{6}
@@ -86,10 +86,10 @@
 \BlockICE{6}{9}
 \BlockICE{6}{10}
 \BlockICE{6}{11}
-\BlockICE{7}{0}
-\BlockICE{7}{1}
-\BlockICE{7}{2}
-\BlockICE{7}{3}
+\BlockBAR{7}{0}
+\BlockBAR{7}{1}
+\BlockBAR{7}{2}
+\BlockBAR{7}{3}
 \BlockICE{7}{4}
 \BlockICE{7}{5}
 \BlockICE{7}{6}
@@ -102,53 +102,53 @@
 \BlockBAR{8}{1}
 \BlockBAR{8}{2}
 \BlockBAR{8}{3}
-\BlockBAR{8}{4}
-\BlockBAR{8}{5}
-\BlockBAR{8}{6}
-\BlockBAR{8}{7}
-\BlockBAR{8}{8}
-\BlockBAR{8}{9}
-\BlockBAR{8}{10}
-\BlockBAR{8}{11}
+\BlockICE{8}{4}
+\BlockICE{8}{5}
+\BlockICE{8}{6}
+\BlockICE{8}{7}
+\BlockICE{8}{8}
+\BlockICE{8}{9}
+\BlockICE{8}{10}
+\BlockICE{8}{11}
 \BlockBAR{9}{0}
 \BlockBAR{9}{1}
 \BlockBAR{9}{2}
 \BlockBAR{9}{3}
-\BlockBAR{9}{4}
-\BlockBAR{9}{5}
-\BlockBAR{9}{6}
-\BlockBAR{9}{7}
-\BlockBAR{9}{8}
-\BlockBAR{9}{9}
-\BlockBAR{9}{10}
-\BlockBAR{9}{11}
+\BlockICE{9}{4}
+\BlockICE{9}{5}
+\BlockICE{9}{6}
+\BlockICE{9}{7}
+\BlockICE{9}{8}
+\BlockICE{9}{9}
+\BlockICE{9}{10}
+\BlockICE{9}{11}
 \BlockBAR{10}{0}
 \BlockBAR{10}{1}
 \BlockBAR{10}{2}
 \BlockBAR{10}{3}
-\BlockBAR{10}{4}
-\BlockBAR{10}{5}
-\BlockBAR{10}{6}
-\BlockBAR{10}{7}
-\BlockBAR{10}{8}
-\BlockBAR{10}{9}
-\BlockBAR{10}{10}
-\BlockBAR{10}{11}
+\BlockICE{10}{4}
+\BlockICE{10}{5}
+\BlockICE{10}{6}
+\BlockICE{10}{7}
+\BlockICE{10}{8}
+\BlockICE{10}{9}
+\BlockICE{10}{10}
+\BlockICE{10}{11}
 \BlockBAR{11}{0}
 \BlockBAR{11}{1}
 \BlockBAR{11}{2}
 \BlockBAR{11}{3}
-\BlockBAR{11}{4}
-\BlockBAR{11}{5}
-\BlockBAR{11}{6}
-\BlockBAR{11}{7}
-\BlockBAR{11}{8}
-\BlockBAR{11}{9}
-\BlockBAR{11}{10}
-\BlockBAR{11}{11}
-\MainCht{4}{0}
-\Apple{7}{4}
-\Apple{4}{4}
-\Apple{5}{11}
+\BlockICE{11}{4}
+\BlockICE{11}{5}
+\BlockICE{11}{6}
+\BlockICE{11}{7}
+\BlockICE{11}{8}
+\BlockICE{11}{9}
+\BlockICE{11}{10}
+\BlockICE{11}{11}
+\MainCht{2}{1}
+\Apple{2}{0}
+\Apple{5}{4}
+\Apple{11}{11}
 \end{tikzpicture}
 \end{document}
