--- a/Report/20230716-PrismGCDocument/PrismGCDocument.tex
+++ b/Report/20230716-PrismGCDocument/PrismGCDocument.tex
@@ -3,6 +3,7 @@
 \usepackage{pdfpages}
 
 \usepackage{xCommon}
+\usepackage{xMath}
 \usepackage{xFloat}
 \usepackage{xTikz}
 
@@ -29,5 +30,8 @@
 \input{Section03.tex}
 \clearpage
 \input{Section04.tex}
+\clearpage
+\appendix
+\input{Appendix.tex}
 
 \end{document}
