--- a/Report/20230716-PrismGCDocument/Section01.tex
+++ b/Report/20230716-PrismGCDocument/Section01.tex
@@ -17,12 +17,31 @@
     \includegraphics{build/Section01_01.fig.pdf}
 \end{Figure}
 
+\subsection{系统总体架构}
+系统总体架构如\xref{fig:系统总体架构}所示，自底向上可以分为硬件电路层、硬件抽象层、软件逻辑层三个层次。硬件电路层和硬件抽象层构成了硬件部分。硬件电路层使用Verilog语言在FPGA上实现所需的硬件模块或物理硬件的驱动模块，将硬件的行为与寄存器中的数值相关联，并搭载Arm Cortex M0软核处理器。硬件抽象层则使用C语言将相关硬件的寄存器封装为C语言可操作的对象，并在此基础上，编写一些函数使软硬件之间的交互更为便利。软件逻辑层则构成软件部分，其实现了游戏的主体内容，这主要包括游戏本身的玩法和交互逻辑、游戏各界面的具体显示内容、游戏各界面间的切换等。
+
+\begin{Figure}[系统总体架构]
+    \includegraphics{build/Section01_02.fig.pdf}
+\end{Figure}
+
+\subsection{系统软硬件功能划分}
+系统的软硬件功能划分如下：硬件部分负责实现诸如显示编码、数码管扫描、蜂鸣器驱动等对速度要求较高，需要复杂时序控制的部分。硬件部分将外设封装为若干寄存器，使得软件部分不需要关心驱动外设所需的时序，而是可以直接通过寄存器操作外设的工作状态。软件部分负责游戏功能的实现，根据输入和游戏逻辑控制图像和声音。
+
+\subsection{系统构成}
+系统硬件主要由四部分组成：硬木课堂EG4S20核心板、硬木课堂HDMI扩展模块、WII Nunchuck手柄、$1024\times 600$分辨率的HDMI显示屏。如\xref{fig:系统硬件构成}所示。
+
+\begin{Figure}[系统硬件构成]
+    \includegraphics[width=10cm]{image/3.jpg}
+\end{Figure}
+
+
 \subsection{系统完成进度}
+系统至复赛前完成进度约90\%，可以完整运行，作为游戏机已初步具备可玩性。
 
-系统完成进度目前约70\%，可以完整运行，后期将着重优化系统各部分功能。
-
-显示部分，目前已经成功地在FPGA上实现了HDMI协议，可以点亮屏幕。并且成功地利用了FPGA片上的SDRAM资源作为显存，可以实现Cortex M0对显示屏的单像素控制。同时在显存使用上应用了双缓存机制，避免了显示刷新过程中的闪烁问题。后续，硬件方面将改善显存的写入速度，提高画面帧率。软件方面将会实现字符显示功能，丰富游戏画面内容和用户交互体验。
+显示部分，初赛时已经成功地在FPGA上实现了HDMI协议，可以点亮屏幕。并且成功地利用了FPGA片上的SDRAM资源作为显存，可以实现Cortex M0对显示屏的单像素控制。同时在显存使用上应用了双缓存机制，避免了显示刷新过程中的闪烁问题。复赛期间通过改进硬件和软件，大幅度提高了显示效率，使得丰富的游戏画面和内容成为可能性。同时，实现了字符显示，基于$8\times 16$点阵字体，支持成倍缩放，支持格式化字符串显示输出。类似技术也被应用于实现特定图案（游戏主角）的显示。但目前显示部分的硬件还存在若干问题和缺陷，首先，显示效率仍然有待进一步提升，其次，显示屏（$1024\times 600$）长边方向256的倍数附近的像素有时会出现显示错位，疑似是显存写入控制存在一定问题，但尚未定位具体的错误点。除此之外，通过连续方式写颜色不同的像素点的操作（用于字符和图案的显示）一次最多只能写16个像素点，且有时会在应当显示的像素后拖尾若干不应出现的像素。后续，将着重修复这些显示缺陷。
 
 音频部分，目前可以利用蜂鸣器发出特定音高和音长的音符，在Cortex M0的控制下，可以根据游戏进程播放不同的提示音，可以播放简单的背景音乐。后续，将在硬件增加音频缓冲区，使得音乐播放更为灵活，在软件提供音乐内容后由硬件独立完成。
 
-输入部分，目前可以利用矩阵键盘中的按键实现对游戏的控制。WII手柄目前已经在Arduino平台上完成测试，可以正确感知手柄按钮和加速度等信息，WII手柄向FPGA的移植目前仍在进行中，计划在复赛中完成，现已初步完成IIC协议的实现。
+输入部分，初赛期间WII手柄已在Arduino平台上完成功能测试，尝试将与WII手柄交互所用的IIC协议在FPGA上硬件实现但未完成。复赛期间在IIC协议的硬件实现上遇到了较大的阻力和困难，故随即改变方案为软件实现，具体而言，即将所需的两路信号SCL和SDA挂载于GPIO，随后通过软件来实现IIC协议所需的时序。目前，WII手柄已经成功接入系统中，系统可以获得手柄的摇杆或手柄的加速度传感器的数据。现在游戏可以通过矩阵键盘、摇杆、体感三种方式进行控制，实现智能化交互。
+
+游戏部分，初赛期间曾以一个极简单的游戏“别踩黑线”作为系统的功能验证。复赛期间，则重新设计了一款全新的游戏“无敌史莱姆的冒险”。游戏设计精巧，并非纯粹的技术验证，而是具有明确独特的核心玩法和丰富的关卡，且具备相当的可玩性。
