--- a/Report/20230716-PrismGCDocument/xFloat.sty
+++ b/Report/20230716-PrismGCDocument/xFloat.sty
@@ -243,7 +243,7 @@
         \centering
         #2
         \captionmake{fig}{#1}
-        \vspace{-12pt}
+        % \vspace{-12pt}
     \end{figure}
 }{}
 
