--- a/Report/20230720-PrismGCppt/演讲稿.md
+++ b/Report/20230720-PrismGCppt/演讲稿.md
@@ -1,3 +1,15 @@
 # 基于ARM处理器的智能游戏机 演讲稿
 
-各位评委，下午好，我们是棱镜项目组，我是李宇轩，
+各位评委，下午好，我们是棱镜项目组，我是李宇轩，这两位是张岩和李铭杰同学。
+
+这是我们游戏机系统的总体框图，以安路科技EG4S20为中心，输入外设主要是WII Nunchunk手柄，输出的话，画面是通过HDMI协议，到这块1024x600的显示屏，音频输出用的就是这个板载的蜂鸣器。
+
+我们的系统架构是这样的，硬件部分主要是M0处理器和AHBLite总线，以及一些需要复杂时序的功能的模块，比如显示编码，硬件部分的意义就是将外设封装为若干寄存器，使得软件部分不需要关心驱动外设所需的时序，而是可以直接通过寄存器操作外设的工作状态。软件部分就主要是用来实现游戏的具体内容等。
+
+我们主要有两个设计亮点。
+
+其一是HDMI显示。硬件上我们是自己实现了HDMI编码和VESA时序，这里面过程充运用了安路提供的IP资源，包括硬件锁相环PLL和端口倍频ODDR。硬件上SDRAM做了一块显存，显示内容是由软件控制，所以我们游戏画面就可以做的比较丰富，比如这个史莱姆和苹果啊，还有字符的显示。尤其值得一提的是，显示中我们引入了Ping Pong机制，有效避免了屏幕闪烁的问题。
+
+其二是WII Nunchunk手柄，它通讯用的是IIC协议，通过挂GPIO然后软件实现。手柄的功能很丰富，这边C和Z两个按键，有一个摇杆，内部还有加速度传感器，实现了体感控制，提供给我们游戏机一个智能化的的交互体验。
+
+接下来，我们由张岩和李铭杰同学实机演示我们的游戏——
