--- a/Report/20230817-PrismGCDocumentFinal/Abstract.tex
+++ b/Report/20230817-PrismGCDocumentFinal/Abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-    本文是棱镜项目组的作品PrismGC的设计报告。PrismGC是一款在安路科技EG4S20的FPGA平台上构建，基于Arm Cortex M0处理器的智能游戏机系统。PrismGC目前已经实现了基本的输入输出控制和游戏的显示与音乐功能，并基于WII手柄实现了游戏的智能化体感交互。PrismGC现搭载了一款项目组自行设计开发的游戏“无敌史莱姆大冒险”，具有明确的核心玩法和丰富的关卡，具备相当的可玩性。PrismGC现使用自制板卡，并具有自主设计铝合金CNC加工的产品外壳，外形简洁美观。本文将就PrismGC的系统设计、硬件架构、软件游戏流程、智能化IP设计等内容逐一进行介绍。
+    本文是棱镜项目组的作品PrismGC的设计报告。PrismGC是一款在安路科技EG4S20的FPGA平台上构建，基于Arm Cortex M0处理器的智能游戏机系统。PrismGC目前已经实现了基本的输入输出控制和游戏的显示与音乐功能，并基于WII手柄实现了游戏的智能化体感交互。PrismGC现搭载了一款项目组自行设计开发的游戏“无敌史莱姆大冒险”，具有明确的核心玩法和丰富的关卡，具备相当的可玩性。PrismGC现使用自制底板和自主设计的铝合金CNC加工的产品外壳，外形简洁美观。本文将就PrismGC的系统设计、硬件架构、软件游戏流程、智能化IP设计等内容逐一进行介绍。
 \end{abstract}
