--- a/Report/20230817-PrismGCDocumentFinal/Section02.tex
+++ b/Report/20230817-PrismGCDocumentFinal/Section02.tex
@@ -364,4 +364,4 @@ GPULite模块的寄存器结构如\xref{code:GPULite的寄存器结构}所示，
 
 硬件层面，原先显存控制器外部，写入和读取上均有FIFO缓冲，但客观上，写入的FIFO缓冲是不必要的。基于\texttt{LCDRectangle()}绘制同一颜色的像素，硬件上有若干寄存器存储了待写入颜色的像素和写入的长度，FIFO的存在使硬件需要向其写入大量相同像素，这是无意义的。基于\texttt{LCDPixels()}绘制不同颜色的像素，硬件上也已有寄存器作为随机存储器进行缓存，FIFO在这里只是徒增了一层缓冲。并且，由于种种原因，原先写入的FIFO最高只能按照时钟的八分频工作，否则与显示各部的配合就会出现问题，这显著制约了显示效率。除此之外，原先写入的FIFO触发写显存的硬件逻辑相当复杂，这间接导致了\texttt{LCDRectangle()}运作的不稳定，有会出现应写的像素未写完，乃至系统崩溃等情况，这显著影响了显示的可靠性。综上，决赛期间，取消了显存写入的FIFO缓冲，使写入可以直通显存控制器，大幅提升了显示效率和可靠性。
 
-软件层面，原先在复赛期间，观察到当单次连续写入在$x$方向越过$256$的整数倍，即$256, 512, 768$时，越过部分的像素将会折回，即实际显示的$x$坐标相较预定$x$坐标减少了$256$。这导致了许多显示上的异常与故障，影响了显示体验。决赛期间，经过查阅资料发现，这与片上内嵌的SDRAM（型号为EM638325）自身的特性有关，其地址由ROW和COL指定，是二维的，简单来说，EM638325“一行”有256个存储器，连续写入时，当ROW到达256边界时会自动折回，但COL并不会相应加1，这也就导致了上述问题。决赛期间，针对这一问题在软件上进行了规避，\xref{code:GPULite的基础函数}中\texttt{RAMWrite()}函数会将将触及256边界的写入分为两段，从而避免该异常的发生，提升了显示体验。
+软件层面，原先在复赛期间，观察到当单次连续写入在$x$方向越过$256$的整数倍，即$256, 512, 768$时，越过部分的像素将会折回，即实际显示的$x$坐标相较预定$x$坐标减少了$256$。这导致了许多显示上的异常与故障，影响了显示体验。决赛期间，经过查阅资料发现，这与片上内嵌的SDRAM（型号为EM638325）自身的特性有关，其地址由ROW和COL指定，是二维的，简单来说，EM638325“一行”有256个存储器，连续写入时，当COL到达256边界时会自动折回，但ROW并不会相应加1，这也就导致了上述问题。决赛期间，针对这一问题在软件上进行了规避，\xref{code:GPULite的基础函数}中\texttt{RAMWrite()}函数会将将触及256边界的写入分为两段，从而避免该异常的发生，提升了显示体验。
