--- a/Report/20230819-PrismGCpptFinal/演讲稿.md
+++ b/Report/20230819-PrismGCpptFinal/演讲稿.md
@@ -4,21 +4,35 @@
 
 这是我们游戏机系统的总体框图，以安路科技EG4S20为中心，输入外设主要是WII Nunchunk手柄，输出的话，画面是通过HDMI协议，到这块显示屏。音频就是通过3.5mm音频接口，到这个外置的扬声器。
 
-这个是我们游戏机系统的一个硬件构成，电路板是有两层，上面是硬木课堂EG4S20核心板，下面呢是我们决赛期间自行用KiCad设计的一块扩展板。自制扩展板的主要用途就是从核心板引出各个对外的接口，比如HDMI接口、3.5mm音频接口、包括这个自己做的WII Nunchunk手柄接口。
+这个是我们游戏机系统的一个硬件构成，电路板是有两层，上面是硬木课堂EG4S20核心板，下面呢是我们决赛期间自行用KiCad设计的一块扩展板。这里有一块裸板，几位评委老师可以看一下。自制扩展板的主要用途就是从核心板引出各个对外的接口，比如HDMI接口、3.5mm音频接口、包括这个自己做的WII Nunchunk手柄接口。系统的调试和供电是用这个Type C接口，我们就只要这一根线。因为板上有一个USB HUB芯片，通过HUB我们就可以一根线连接到硬件烧写、串口通讯、软件调试三个口，而且还引了一个Type A的口出去，通过板子可以给扬声器供电。相较于原先硬木课堂的扩展板，我们自制的扩展板，不仅功能更加完善，空间布局上也更为合理。
 
-系统的调试和供电是用这个Type C接口，我们就只要这一根线。因为板上有一个USB HUB芯片，通过HUB我们就可以一根线连接到硬件烧写、串口通讯、软件调试三个口，而且还引了一个Type A的口出去，通过板子可以给扬声器供电。相较于原先硬木课堂的扩展板，我们自制的扩展板，不仅功能更加完善，空间布局上也更为合理。
+这边是自制扩展板的原理图和版图，我们的电路板最终是交给嘉立创进行生产制作。
 
-另外呢，我们还用Inventor设计了一个外壳，外壳是铝合金CNC加工，表面阳极氧化处理，外形简洁美观。有了外壳之后，我们游戏机就更像一个产品了。
+另外呢，我们还用Inventor设计了一个外壳，外壳是铝合金CNC加工，表面阳极氧化处理，外壳上盖则是透明亚力克材质。整体外形简洁美观。有了外壳之后，我们游戏机就更像一个产品了。这里是外壳和外壳上盖的3D模型。
 
-我们的系统架构是这样的，硬件部分主要是M0处理器和AHBLite总线，以及一些需要复杂时序的功能的模块，比如显示编码，硬件部分的意义就是将外设封装为若干寄存器，使得软件部分不需要关心驱动外设所需的时序，而是可以直接通过寄存器操作外设的工作状态。软件部分就主要是用来实现游戏的具体内容等。
-
-软件程序现在是通过MIF文件，在综合时固化在硬件的程序空间中，所以，我们游戏机的运行现在是不需要电脑和调试器的，插上电就可以开始运行。
+我们的系统架构是这样的，硬件部分主要是M0处理器和AHBLite总线，以及一些需要复杂时序的功能的模块，比如显示编码，硬件部分的意义就是将外设封装为若干寄存器，使得软件部分不需要关心驱动外设所需的时序，而是可以直接通过寄存器操作外设的工作状态。软件部分就主要是用来实现游戏的具体内容等。软件程序现在是通过MIF文件，在综合时固化在硬件的程序空间中，所以，我们游戏机的运行现在是不需要电脑和调试器的，插上电就可以开始运行。
 
 我们主要有两个设计亮点。
 
-其一是HDMI显示。首先我们显示分辨率做到了1024x600，在这个芯片上我们觉得应该算比较高了，然后显示用的是HDMI接口，这就很方便，随便哪个屏幕包括家里电视机，插上线就可以作为我们游戏机的显示屏。硬件上我们是自己用Verilog实现了HDMI编码和VESA时序，这里面过程充运用了安路提供的IP资源，包括硬件锁相环PLL和端口倍频ODDR。硬件上SDRAM做了一块显存，显存控制器当然是硬件，但是，显示内容是完全由软件控制的，软件可以控制显示屏上的每一个像素点，所以我们游戏画面就可以做的比较丰富，想画什么画什么，比如这个史莱姆和苹果啊，还有字符的显示。而且经过初赛、复赛、决赛三轮迭代，显示效率也是较高的。尤其值得一提的是，显示中我们引入了Ping Pong机制，有效避免了屏幕闪烁的问题。
+其一是HDMI显示。首先我们显示分辨率做到了1024x600，在这个芯片上我们觉得应该算比较高了，然后显示用的是HDMI接口，这就很方便，随便哪个屏幕包括家里电视机，插上线就可以作为我们游戏机的显示屏。硬件上我们是自己用Verilog实现了HDMI编码和VESA时序，这里面过程充运用了安路提供的IP资源，包括硬件锁相环PLL和端口倍频ODDR。硬件上用SDRAM做了一块显存，显存控制器当然是硬件，但是，显示内容是完全由软件控制的，软件可以控制显示屏上的每一个像素点，所以我们游戏画面就可以做的比较丰富，想画什么画什么，比如这个史莱姆和苹果啊，还有字符的显示。而且经过初赛、复赛、决赛三轮迭代，显示效率也是较高的。
+
+这里我们具体讨论一下显示IP的技术细节。显示模块主要由SDRAM控制器和HDMI编码两部分构成。
+
+首先，我们来看显存是如何写入的。软件端绘图最常用的就是画矩形，我们要理解，显存它虽然对应了屏幕上1024x600的二维区域，但本质上仍然是一维的，先存第一行的像素，再存第二行的像素。所以画一个矩形，软件会把它拆成一行一行的，对于每一行，它会写显示模块的寄存器，告诉硬件，从哪个位置开始写，要写多长，要写什么颜色的像素。硬件拿到写信号后，就会向SDRAM发起一个连续写的过程。这样矩形就被写入了显存中。如果是画图案，过程是类似的，只不过连续写的时候每次写的是不同颜色的像素罢了。
+
+随后，显存的数据是如何被显示的呢。先需要解释一下VESA时序，我们知道，显示屏它是扫描工作的，但是呢，1024x600的屏幕的实际扫描范围是大于1024x600，就是在这个H_DISP和V_DISP之外还有一些消影的间隔，包括FRONT、BACK、SYNC，这个在原来的那种CRT显示器是留给电子束回扫用的，现在其实不用了，但这是VESA的时序上的要求。由于1024x600不是一个标注的分辨率，它的VESA时序参数是我们自己算出来的。扫描每个像素的时钟是pixel clock，pixel clock的频率是50MHz。但是HDMI编码输出的时候需要一个十倍频500MHz的时钟，因为一个像素RGB各八位，每个颜色一根线要传八位数据，再加两个校验位就是十位数据，所以需要十倍频。但为了降低系统内部的频率，应用了安路端口倍频ODDR的IP，这样就只要五倍频250MHz了，然后50MHz和250MHz是通过锁相环PLL的IP的产生的。显存与VESA时序和HDMI编码之间，用了一个FIFO进行缓冲。
+
+最后解释一下我们的Ping Pong机制。最初遇到一个问题，在刷新画面的过程中，显示会出现闪烁的现象，这严重影响了显示体验。经过研究，出现闪烁的原因在于向显存写入图像的过程中，HDMI从显存中读取到了半截的图像。为了解决该问题，引入了Ping Pong的双缓存机制，在SDRAM中创建两块显存空间
+1. 第一个周期中，M0向显存1写入，HDMI从显存2读取。 
+2. 第二个周期中，M0向显存2写入，HDMI从显存1读取。
+
+这样一来，读写交错在两块显存空间进行，确保了显示的画面始终是完整的。
 
 其二是WII Nunchunk手柄，它通讯用的是IIC协议，通过挂GPIO然后软件实现。手柄的功能很丰富，这边C和Z两个按键，有一个摇杆，内部还有加速度传感器，实现了体感控制。无论是摇杆还是体感，从人的操作来说都是很舒适，相较于直接去戳键盘，而且也和我们的游戏内容非常适配，提供给我们游戏机一个智能化的的交互体验。
+
+手柄最开始是通过杜邦线连接的，自制板卡的时候专门为它做了一个板边连接器，就可以直接插到板子上了。
+
+手柄怎么通过IIC协议通讯呢，首先要初始化，依次发送START、0x40、0x00、STOP。初始化之后读取数据的时候，类似的，发送START、0x00、STOP，然后收六个字节的数据，这六个字节的数据是这样排的。第一第二个字节是分别是摇杆X,Y轴的数据，第三第四第五个字节是加速传感器X,Y,Z方向的数据高八位，第六个字节，则分别是X,Y,Z方向加速度的低两位以及按钮C和Z的状态。
 
 我们的项目是在github上开源的，包括软件代码硬件代码都开源了，这边是我们项目的仓库地址。这个也不是说因为决赛汇报了才临时放上去的，从初赛开始就有了，有400多个commit，因为我们自己代码协作和版本控制都也都是基于git和github完成的。因为我个人也是比较赞同开源精神的，代码嘛，没必要藏着掖着，也希望我们的工作能被后来的同学用上。
 
